feat: 크루의 출석 기록을 수정하는 기능 구현