@@ -2,13 +2,16 @@ package attendance.domain;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class CrewAttendances {
 
+    private static final DateTimeFormatter MONTH_DAY_PATTERN = DateTimeFormatter.ofPattern("M월 d일", Locale.KOREA);
     private final Map<Crew, Attendances> crewAttendances;
 
     public CrewAttendances(final Map<Crew, List<LocalDateTime>> crewAttendanceDateTimes) {
@@ -22,7 +25,7 @@ public class CrewAttendances {
                         crew -> new Attendances(crewAttendanceDateTimes.get(crew)
                                 .stream()
                                 .map(Attendance::new)
-                                .toList())
+                                .collect(Collectors.toList()))
                 ));
     }
 
@@ -42,6 +45,23 @@ public class CrewAttendances {
         validateCrewExistence(crew);
         return crewAttendances.get(crew)
                 .findSameDateAttendance(findDate);
+    }
+
+    public void modifyCrewAttendanceByModificationDateTime(
+            final Crew crew, final LocalDateTime modificationDateTime, final LocalDate today
+    ) {
+        validateCrewExistence(crew);
+        validateIsFutureDate(modificationDateTime.toLocalDate(), today);
+        Attendances attendances = crewAttendances.get(crew);
+        attendances.modifyByModificationDateTime(modificationDateTime);
+    }
+
+    private void validateIsFutureDate(final LocalDate comparisonDate, final LocalDate standardDate) {
+        if (comparisonDate.isAfter(standardDate)) {
+            throw new IllegalArgumentException(
+                    String.join(" ", MONTH_DAY_PATTERN.format(standardDate), "보다 미래의 날짜를 수정할 수 없습니다.")
+            );
+        }
     }
 
 }
